now you only need to create font once. (#1269)
* update

* update

* update

* update

* update

* update

* update

* range extension

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -156,9 +156,9 @@
 
 	"HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED!": {
 		Italian:"IN FASE DI PRODUZIONE - TI ABBIAMO AVVERTITO!"
-		Simplified_Chinese:"⚠︎警告！试验性功能！"
+		Simplified_Chinese:"⚠警告！试验性功能！"
 		Ukrainian:"ПЕРЕБУВАЄ В РОЗРОБЦІ — ВАС ПОПЕРЕДЖЕНО!"
-		Traditional_Chinese:"⚠︎警告！實驗性功能！"
+		Traditional_Chinese:"⚠警告！實驗性功能！"
 		Czech:"VYSOCE EXPERIMENTÁLNÍ - BYLI JSTE VAROVÁNÍ!"
 		Polish:"TRYB EKSPERYMENTALNY - NA WŁASNĄ ODPOWIEDZIALNOŚĆ!"
 		Russian:"В РАЗРАБОТКЕ - ВЫ ПРЕДУПРЕЖДЕНЫ!"
