--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -2262,7 +2262,7 @@
 	"Heal Instantly":{
 		Italian:"Cura istantanea"
 		Simplified_Chinese:"浴火重生",
-		Traditional_Chinese:"獄火重生",
+		Traditional_Chinese:"浴火重生",
 		French:"Soin instantané"
 		Russian:"Мгновенное излечение"
 		Czech:"Okamžitě vyléčit"
