Intentionally breaking json to see if the Travis test catches it

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2594,7 +2594,7 @@
 		Czech:"Populace se bude postupně snižovat, až do úplného zmizení z mapy.."
 		Simplified_Chinese:"城市人口将会持续地减少直至该城市被完全摧毁。"
 		Traditional_Chinese:"城市人口將會持續減少直到該城市被完全摧毀。"
-		Ukrainian:"Населення поступово зменшиться, поки місто не буде зруйновано."
+		Ukrainian:"Населення поступово зменшиться, поки місто не буде зруйновано.
 }
 
 	"Destroy":{
