--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -675,14 +675,14 @@
 		Ukrainian:"Розірвано альянс з містом-державою [name]"
 	}
 
-	"[civName] gave us a [untiName] as gift near [cityName]!":{ // When a city state gives a unit as gift.
-		Italian:"[civName] ci ha dato [untiName] come regalo vicino a [cityName]!"
-		French:"[civName] nous offre un(e) [untiName] prêt de [cityName]!"
-		Russian:"[civName] передал нам в дар [untiName] около города [cityName]!"
-		Simplified_Chinese:"[civName]将[cityName]附近的[untiName]赠予我们！",
-		Traditional_Chinese:"[civName]將[cityName]附近的[untiName]贈與我們！",
-		Czech:"Civilizace [civName] nám darovala jednotku [untiName] poblíž města [cityName]"
-		Ukrainian:"Цивілізація [civName] дарує підрозділ [untiName] біля міста [cityName]"
+	"[civName] gave us a [unitName] as gift near [cityName]!":{ // When a city state gives a unit as gift.
+		Italian:"[civName] ci ha dato [unitName] come regalo vicino a [cityName]!"
+		French:"[civName] nous offre un(e) [unitName] prêt de [cityName]!"
+		Russian:"[civName] передал нам в дар [unitName] около города [cityName]!"
+		Simplified_Chinese:"[civName]将[cityName]附近的[unitName]赠予我们！",
+		Traditional_Chinese:"[civName]將[cityName]附近的[unitName]贈與我們！",
+		Czech:"Civilizace [civName] nám darovala jednotku [unitName] poblíž města [cityName]"
+		Ukrainian:"Цивілізація [civName] дарує підрозділ [unitName] біля міста [cityName]"
 	}
 
 	"[civName] has denounced us!":{
