--- a/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
+++ b/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
@@ -1052,7 +1052,7 @@
 		Portuguese:"Ruínas antigas"
 		Dutch:"Oude ruïnes"
                 Korean:"고대 유적"
-		Czech:"Starověké zříceniny"
+		Czech:"Starobylé ruiny"
 		Ukrainian:"Стародавні руїни"
 }
 
