--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1949,15 +1949,18 @@
 	
 	"Brandenburg Gate":{
 		Italian:"Porta di Brandeburgo"
+		Czech:"Brandenburgská brána"
 	}
 	
 	"Free Great General appears near the Capital":{
 		Italian:"Appare un Grande Generale vicino alla Capitale"
         Traditional_Chinese:"免費的大軍事家已經在首都附近出現"
+		Czech:"Velký Generál zdarma se objevil poblíž hlavního města"
 	}
 	
 	"'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace":{
-		Italian:"'La pallida morte batte ugualmente alla porta del povero e al palazzo del re.' - Orazio"
+		Italian:"'La pallida morte batte ugualmente alla porta del povero e al palazzo del re.' - Orazio",
+		Czech:"'Bledá smrt klepe u vrat chudáka stejně jako na královský palác.' - Horatius"
 	}
 
 	"Broadcast Tower":{
