--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -803,7 +803,8 @@
 	}
 	
 	"Naresuan's Elephant":{
-		Italian:"Elefante di Naresuan"	
+		Italian:"Elefante di Naresuan"
+		Czech:"Naresuanův slon"
 	}
 
 	"Samurai":{
