Update Buildings.json (#1309)
two translations corrected and one added (Polish)

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -639,7 +639,7 @@
 		Traditional_Chinese:"大競技場"
 		Portuguese:"Circo Máximo" //can also be spelled normally as Circus Maximus altough that (Circo Máximo) is written in normal portuguese not latin
 		German:"Circus Maximus"
-		Polish:"Circus Maximus"
+		Polish:"Cyrk maksymalny"
 		Czech:"Circus Maximus"
 }
 
@@ -768,7 +768,7 @@
 		Simplified_Chinese:"兵马俑"
 		Traditional_Chinese:"兵馬俑"
 		French:"Armée de Terre Cuite"
-		Polish:"Terakotowa Armia"
+		Polish:"Armia z terakoty"
 		Russian:"Терракотовая армия"
 		Czech:"Terakotová armáda"
 		German:"Terrakotta Armee"
@@ -2332,6 +2332,7 @@
 		Traditional_Chinese:"“奇蹟的不是那片星海如此遼闊，而是人類竟然成功的測量了它。”——阿納托爾·法郎士（法國小說家）"
 		Czech:"'Je zázrakem, nikoliv to že je noční obloha naplněná nekonečnem hvězd, ale že je člověk dokázal změřit' - Anatole France"
 		Russian:"'Чудо не в том, что звездный небосклон столь обширен, но в том, что человек сумел измерить его' -  Анатоль Франс"
+		Polish:"Zadziwiające jest to, że pole gwiazd nie jest tak ogromne, ale że człowiek je zmierzył. - Anatole France"
 }
 
 	"2 free great scientists appear":{
