--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -79,7 +79,7 @@
 		Traditional_Chinese:"[civName]已經對我們宣戰！"
 		Portuguese:"[civName] declarou guerra contra nós!"
 		German:"[civName] hat uns den Krieg erklärt!"
-                Polish:"Władca cywilizacji [civName] wypowiedział nam wojnę!",
+                Polish:"Władca cywilizacji [civName] wypowiedział nam wojnę!"
 		Czech:"Civilizace [civName] nám vyhlásila válku!"
 }
 
@@ -93,7 +93,7 @@
 		French:"[leaderName] de [nation]"
 		Russian:"[leaderName] из [nation]"
 		Romanian:"[leaderName] de [nation]"
-                Polish:"[leaderName], władca cywilizacji [nation]",
+                Polish:"[leaderName], władca cywilizacji [nation]"
 		Czech:"[leaderName], [nation]"
 }
 
@@ -270,6 +270,7 @@
 		French:"Nous nous en souviendrons."
 		Simplified_Chinese:"这种侮辱我们绝不会忘记。请好自为之！"
 		Traditional_Chinese:"這種侮辱我們絕不會忘記。請好自為之！"
+		Polish:"Zapamiętamy to sobie!"
 		Russian:"Мы это запомним"
 		Czech:"To vám nikdy nezapomeneme!"
 }
@@ -282,6 +283,7 @@
 		French:"Impardonnable"
 		Simplified_Chinese:"仇深似海"
 		Traditional_Chinese:"仇深似海"
+		Polish:"Niewybaczlne"
 		Portuguese:"Imperdoável"
 		Russian:"Непростительно враждебные"
   		Czech:"Nenávist"
@@ -291,6 +293,7 @@
 		Italian:"Nemici"
 		French:"Ennemi"
 		Simplified_Chinese:"宿命之敌"
+		Polish:"Wrogowie"
 		Traditional_Chinese:"宿命之敵"
 		Portuguese:"Inimigos" //as in 'we are enemies' not just 'they are our enemy'
 		Russian:"Враждебные"
@@ -302,6 +305,7 @@
 		French:"Adversaire" //or en compétition
 		Simplified_Chinese:"瑜亮之争"
 		Traditional_Chinese:"瑜亮之爭"
+		Polish:"Konkurenci"
 		Portuguese:"Adversários"
 		Russian:"Соперничающие"
   		Czech:"Negativní"
@@ -312,6 +316,7 @@
 		French:"Neutre"
 		Simplified_Chinese:"泛泛之交"
 		Traditional_Chinese:"泛泛之交"
+		Polish:"Neutralny"
 		Portuguese:"Neutra" // relation=relação relação is in feminine so therefore neutral(= neutro/neutra) deve ser feminino
 		Russian:"Нейтральные"
   		Czech:"Neutrální"
@@ -322,6 +327,7 @@
 		French:"Favorable"
 		Simplified_Chinese:"惺惺相惜"
 		Traditional_Chinese:"惺惺相惜"
+		Polish:"Ulubieniec"
 		Portuguese:"Favorável"
 		Russian:"Приемлемые"
   		Czech:"Pozitivní"
@@ -331,6 +337,7 @@
 		Italian:"Amichevoli"
 		French:"Ami"
 		Simplified_Chinese:"秦晋之好"
+		Polish:"Przyjaciel"
 		Traditional_Chinese:"秦晉之好"
 		Portuguese:"Amigos"
 		Russian:"Дружеские"
@@ -342,6 +349,7 @@
 		French:"Allié"
 		Simplified_Chinese:"歃血之盟"
 		Traditional_Chinese:"歃血之盟"
+		Polish:"Sojusznik"
 		Portuguese:"Aliado"
 		Russian:"Союзнические"
   		Czech:"Aliance"
@@ -353,6 +361,7 @@
 		Italian:"Dona [amountOfCulture] punti Cultura a minimo 30 Punti Influenza"
 		French:"Fournit [amountOfCulture] de Culture à 30 d'influence"
 		Simplified_Chinese:"当影响力不低于30时提供[amountOfCulture]文化"
+		Polish:"Dodaje [amountOfCulture] kultury przy Wpływie równym 30"
 		Traditional_Chinese:"當影響力不低於30時提供[amountOfCulture]文化"
 		Russian:"Даёт [amountOfCulture] культуры при 30 Влияния",
 		Czech:"Poskytují [amountOfCulture] bodů Kultury při Vlivu [30] "
@@ -362,6 +371,7 @@
 		Italian:"Dona 3 Cibo alla Capitale e 1 Cibo alle altre Città a minimo 30 Punti Influenza"
 		French:"Fournit 3 Nourriture à la capitale et 1 nourriture pour les autres villes à 30 d'influence"
 		Simplified_Chinese:"当影响力不低于30时为首都提供3食物，为其他城市提供1食物"
+		Polish:"Dodaje 3 jednostki żywności w stolicy i 1 jednostkę w innych miastach przy poziomie Wpływów równym 30"
 		Traditional_Chinese:"當影響力不低於30時為首都提供3食物，為其他城市提供1食物"
 		Russian:"Даёт 3 Еды в столице и 1 Еда в остальных городах при 30 Влияния"
 		Czech:"Poskytuje 3 jídla v hlavním městě a 1 jídlo ve všech ostatních městech při Vlivu 30"
@@ -372,6 +382,7 @@
 		French:"Fournit 3 de Bonheur à 30 d'influence"
 		Simplified_Chinese:"当影响力不低于30时提供3快乐"
 		Traditional_Chinese:"當影響力不低於30時提供3快樂"
+		Polish:"Dodaje z jednostki szczęścia przy poziomie Wpływów równym 30"
 		Russian:"Даёт 3 Счастья при 30 Влияния"
 		Czech:"Poskytuje 3 body Spokojenosti při Vlivu 30"
 },
@@ -380,6 +391,7 @@
 		Italian:"Concede un'unità terrestre ogni 20 turni a minimo 30 Punti Influenza"
 		French:"Fournit des unités terrestres tous les 20 tours à 30 d'influence"
 		Simplified_Chinese:"当影响力不低于30时每20回合提供陆军单位"
+		Polish:"Zapewnia jednostki lądowe co 20 tur przy poziomie Wpływów równym 30"
 		Traditional_Chinese:"當影響力不低於30時每20回合提供陸軍單位"
 		Russian:"Даёт сухопутные юниты каждые 20 ходов при 30 Влияния"
 		Czech:"Poskytuje pozemní jednotky každých 20 kol při Vlivu 30"
@@ -388,6 +400,7 @@
 	"Gift [giftAmount] gold (+[influenceAmount] influence)":{
 		Italian:"Dona [giftAmount] oro (+[influenceAmount] Influenza)"
 		Simplified_Chinese:"赠予[giftAmount]金钱(+[influenceAmount]影响力)"
+		Polish:"Dodaje [giftAmount] złota (+[influenceAmount] influence)"
 		Traditional_Chinese:"贈予[giftAmount]金錢(+[influenceAmount]影響力)"
 		Czech:"Darujme [giftAmount] Zlata (+ [influenceAmount] Vlivu)"
 		Russian:"Подарить [giftAmount] золота (+[influenceAmount] Влияния)"
@@ -396,6 +409,7 @@
 	"Relationship changes in another [turnsToRelationshipChange] turns":{
 		Italian:"I rapporti cambieranno tra [turnsToRelationshipChange] turni"
 		French:"Les relations changent dans [turnsToRelationshipChange] tours"
+		Polish:"Relacje zmieniają się w następnych [turnsToRelationshipChange] turach"
 		Simplified_Chinese:"将在[turnsToRelationshipChange]回合后失去对该城邦的影响"
 		Traditional_Chinese:"將在[turnsToRelationshipChange]回合後失去對該城邦的影響"
 		Russian:"Отношения изменятся в следующие [turnsToRelationshipChange] ходов",
@@ -411,6 +425,7 @@
 		French:"Vous nous avez déclaré la guerre!"
 		Simplified_Chinese:"不知死活的蠢货！你竟敢向我们宣战！"
 		Traditional_Chinese:"不知死活的蠢貨！你竟敢向我們宣戰！"
+		Polish:"Wypowiedziałeś z nami wojnę!"
 		Portuguese:"Você declarou guerra contra nós!"
 		Russian:"Вы объявляли нам войну!"
 		Czech:"Vyhlásili jste nám válku!"
@@ -421,6 +436,7 @@
 		French:"Votre bellicisme est inacceptable pour nous."
 		Simplified_Chinese:"你的穷兵黩武行径是我们无法容忍的！"
 		Traditional_Chinese:"你的窮兵黷武行竟是我們無法容忍的！"
+		Polish:"Wasze podżeganie jest dla nas nie do przyjęcia."
 		Portuguese:"Seus costumes de guerra são inaceitáveis para nós."
 		Russian:"Ваша воинственность для нас неприемлема."
 		Czech:"Vaše chování je pro nás nepřijatelné."
@@ -431,6 +447,7 @@
 		French:"Vous avez capturé nos villes!"
 		Simplified_Chinese:"多行不义必自毙！你竟敢占领我们的城市！"
 		Traditional_Chinese:"多行不義必自斃！你竟敢佔領我們的城市！"
+		Polish:"Przejąłeś nasze miasta!"
 		Portuguese:"Você capturou nossas(nossa) cidades(cidade)!"
 		Russian:"Вы захватывали наши города!"
 		Czech:"Obsadili jste naše města!"
@@ -442,6 +459,7 @@
 		Simplified_Chinese:"多年的和平时光让我们更加珍视彼此的关系。"
 		Traditional_Chinese:"多年的和平時光讓我們更加珍視彼此的關係。"
 		Portuguese:"Anos de paz fortaleceram nossas relações."
+		Polish:"Lata pokoju wzmocniły nasze relacje."
 		Russian:"Годы мира укрепили наши отношения"
 		Czech:"Roky míru posílily naše vzájemné vztahy."
 }
@@ -451,6 +469,7 @@
 		French:"Nos problèmes militaires communs nous ont rapprochés"
 		Simplified_Chinese:"共同的戎马岁月拉近了彼此的距离。"
 		Traditional_Chinese:"共同的戎馬歲月拉近了彼此的距離。"
+		Polish:"Nasza wspólna walka zbliża nas do siebie."
 		Portuguese:"Nossas lutas mutuas nos fazem mais próximos."
 		Russian:"Наши совместные боевые действия сблизили нас"
 		Czech:"Naše společné vélečné tažení nás sblížíli"
@@ -461,6 +480,7 @@
 		Simplified_Chinese:"真是美好的一天！我们宣布：两个文明间将彼此尊重、相互友善！"
 		Traditional_Chinese:"真是美好的一天！我們宣佈：兩個文明間將彼此尊重、相互友善！"
 		French:"Nous avons publiquement signé une Déclaration d'Amitié"
+		Polish:"Podpisaliśmy deklarację o przyjaźni"
 		Portuguese:"Assinamos uma declaração pública de amizade"
 		Russian:"Мы подписали публичную декларацию дружбы"
 		Czech:"Podepsali jsme veřejnou deklaraci přátelství"
@@ -470,6 +490,7 @@
 		Italian:"Hai dichiarato un'amicizia con i nostri nemici!"
 		French:"Vous avez signé une Déclaration d'Amitié avec nos ennemis!"
 		Simplified_Chinese:"渡尽劫波兄弟在，相逢一笑泯恩仇！我们宣布：冰释前嫌、携手前进！",
+		Polish:"Zadeklarowałeś przyjaźń z naszym wrogiem!"
 		Traditional_Chinese:"你竟敢對我們的敵人表示友好！",
 		Portuguese:"Voçê declarou amizade a um de nossos inimigos!"
 		Russian:"Вы дружите с нашими врагами!"
@@ -479,6 +500,7 @@
 		Italian:"Hai dichiarato un'amicizia con i nostri alleati."
 		French:"Vous avez signé une Déclaration d'Amitié avec nos alliés"
 		Simplified_Chinese:"兄弟齐心、其利断金！我们宣布：我们与盟友间兄弟般的友谊永世长存！"
+		Polish:"Zadeklarowałeś przyjaźń z naszymi sojusznikami"
 		Traditional_Chinese:"兄弟齊心、其力斷金！我們宣佈：我們與盟友間兄弟般的友誼永世長存！"
 		Portuguese:"Voçê declarou amizade a um de nossos aliados"
 		Russian:"Вы дружите с нашими союзниками"
@@ -489,6 +511,7 @@
 		Italian:"I nostri accordi di passaggio hanno avvicinato le nostre nazioni."
 		French:"Notre Accord de libre passage nous a rapprochés"
 		Simplified_Chinese:"开放的边界促进了彼此的了解，让我们的人民心心相通！"
+		Polish:"Nasze otwarte granice zbliżyły nas do siebie."
 		Traditional_Chinese:"開放的邊界促進了彼此的了解，讓我們的人民心心相通！"
 		Portuguese:"Nossa fronteiras abertas nos fizeram mais próximos."
 		Russian:"Наши открытые границы сблизили нас"
@@ -499,6 +522,7 @@
 	"Your so-called 'friendship' is worth nothing.":{ // When we have a decleration of friendship to someone and we declare war on them
 		Italian:"La tua cosiddetta 'amicizia' non vale nulla!"
 		Portuguese:"Sua chamada 'amizade' não vale nada."
+		Polish:"Wasza tak zwana 'przyjaźń' jest nic warta."
 		French:"Votre soi-disant 'amitié' ne vaut rien."
 		Simplified_Chinese:"你所谓的“友谊”一文不值。"
 		Traditional_Chinese:"你所謂的“友誼”一文不值。"
@@ -509,6 +533,7 @@
 	"You have publicly denounced us!":{
 		Italian:"Ci hai denunciato pubblicamente di fronte al mondo!"
 		French:"Vous nous avez dénoncé publiquement!"
+		Polish:"Potępiłeś nas publicznie!"
 		Simplified_Chinese:"批判的武器不能代替武器的批判，谴责是无力的懦夫行为。"
 		Traditional_Chinese:"批判的武器不能代替武器的批判，譴責是無力的懦夫行為。"
 		Russian:"Вы публично осудили нас!"
@@ -518,6 +543,7 @@
 	"You have denounced our allies":{
 		Italian:"Hai denunciato i nostri alleati!"
 		French:"Vous avez dénoncé nos alliées"
+		Polish:"Potępiłeś naszych sojuszników publicznie!"
 		Simplified_Chinese:"对我们盟友的侮辱也是对我们的冒犯，请好自为之！"
 		Traditional_Chinese:"對我們盟友的汙辱也是對我們的冒犯，請好自為之！"
 		Russian:"Вы осудили наших союзников!"
@@ -528,6 +554,7 @@
 		Italian:"Hai denunciato i nostri nemici!"
 		French:"Vous avez dénoncé nos ennemies"
 		Simplified_Chinese:"敌人的敌人就是朋友，你的谴责是维护公正的仗义执言，我们期待听到更多。"
+		Polish:"Potępiłeś naszych wrogów"
 		Traditional_Chinese:"敵人的敵人就是朋友，你的譴責是維護公正的仗義執言。"
 		Russian:"Вы осудили наших врагов"
 		Czech:"Odsoudili jsme naše nepřátele"
@@ -537,6 +564,7 @@
 	"Demands":{
 		Italian:"Richieste"
 		French:"Demandes"
+		Polish:"Żądania"
 		Simplified_Chinese:"要求"
 		Traditional_Chinese:"要求"
 		Russian:"Требования"
@@ -545,6 +573,7 @@
 	"Please don't settle new cities near us.":{
 		Italian:"Smetti di fondare città vicino a noi."
 		French:"Veuillez ne pas construire de villes proches de nous."
+		Polish:"Proszę nie osiedlaj się w pobliżu naszych miast."
 		Simplified_Chinese:"请不要在我们附近建立新的城市。"
 		Traditional_Chinese:"請不要在我們附近建立新的城市。"
 		Russian:"Пожалуйста, не закладывайте новых городов рядом с нами."
@@ -554,6 +583,7 @@
 		Italian:"Ti porgiamo le nostre scuse."
 		French:"Très bien, nous chercherons d'autres terres à coloniser"
 		Simplified_Chinese:"好的，我们将会寻找新的建城位置。"
+		Polish:"Bardzo proszę, będziemy szukać nowych ziem do osiedlenia się."
 		Traditional_Chinese:"好的，我們將會尋找其他位置建立城市。"
 		Russian:"Хорошо, мы найдем другие земли для поселений"
 		Czech:"Nu dobrá, podíváme se po nových místech k zakládání měst."
@@ -561,6 +591,7 @@
 	"We shall do as we please.":{
 		Italian:"Colonizzeremo la terra che ci pare e piace."
 		French:"Nous faisons ce que nous voulons."
+		Polish:"Zrobimy jak chcemy"
 		Simplified_Chinese:"我们只是自己的奴隶，这里不需要弱者叽叽喳喳。"
 		Traditional_Chinese:"我們只依照自己的意志行事。"
 		Russian:"Мы поступим, как сочтем нужным"
@@ -570,6 +601,7 @@
 	"You betrayed your promise to not settle cities near us":{
 		Italian:"Hai tradito la tua promessa di non fondare città nelle nostre vicinanze."
 		French:"Vous avez trahis votre promesse de ne pas fonder de ville proche de nous"
+		Polish:"Nie dotrzymałeś umowy by nie osiedlać się blisko naszych miast"
 		Simplified_Chinese:"你违背了不在我们附近建城的承诺，请好自为之。"
 		Traditional_Chinese:"你違背了不在我們附近建立城市的承諾，請好自為之。"
 		Russian:"Вы нарушили ваше обещание не закладывать города рядом с нами"
@@ -579,6 +611,7 @@
 	"You fulfilled your promise to stop settling cities near us!":{
 		Italian:"Hai mantenuto la tua promessa di non fondare città nelle nostre vicinanze."
 		French:"Vous avez tenu votre promesse de ne pas fonder de ville proche de nous!"
+		Polish:"Wywiązałeś się z umowy aby nie osiedlać się blisko naszych miast"
 		Simplified_Chinese:"感谢你履行了不在我们附近建城的承诺。"
 		Traditional_Chinese:"感謝你履行了不在我們附近建立城市的承諾。"
 		Russian:"Вы выполнили ваше обещание не закладывать города рядом с нами"
@@ -588,6 +621,7 @@
 	"You refused to stop settling cities near us":{
 		Italian:"Hai continuato a fondare città nelle nostre vicinanze."
 		French:"Vous avez refusez de ne pas fonder de villes proches de nous"
+		Polish:"Odmówiłeś prośby aby nie osiedlać się blisko naszych miast"
 		Simplified_Chinese:"你拒绝停止在我们附近建城的决定是愚蠢的，好自为之！"
 		Traditional_Chinese:"你拒絕停止在我們附近建立城市的決定是愚蠢的，好自為之！"
 		Russian:"Вы отказались не закладывать города рядом с нами"
@@ -597,6 +631,7 @@
 	"We noticed your new city near our borders, despite your promise. This will have....implications.":{
 		Italian:"Abbiamo notato la la tua nuova città vicino ai nostri confini. E questo avrà... ripercussioni sui nostri rapporti."
 		French:"Nous avons remarquez votre nouvelle ville à notre frontière, malgré votre promesse. Cela aura des... conséquences."
+		Polish:"Mimo obietnicy zauważyliśmy twoje nowe miasto w pobliżu naszych granic. Poniesiesz za to konsekwencje"
 		Simplified_Chinese:"尽管你答应了，我们还是注意到你在我们边境附近建立了新城市。如果有不好的影响...这将是你自找的！"
 		Traditional_Chinese:"儘管你答應了，我們還是注意到你在我們邊境附近建立了新城市。如果有不好的影響...這將是你自找的！"
 		Russian:"Мы заметили ваш новый город около наших границ. Это может повлечь... последствия."
@@ -606,6 +641,7 @@
 	"Your arrogant demands are in bad taste":{
 		Italian:"Hai fatto una richiesta arrogante."
 		French:"Vos arrogantes demandes sont de mauvais goût"
+		Polish:"Twoje aroganckie żądania są w złym guście"
 		Simplified_Chinese:"你的傲慢要求不合情理。"
 		Traditional_Chinese:"你的傲慢要求不合情理。"
 		Russian:"Ваши высокомерные требования раздражают"
@@ -619,6 +655,7 @@
 	"Cultured":{
 		Italian:"Acculturata"
 		French:"Cultivée"
+		Polish:"Wykształcony"
 		Simplified_Chinese:"文化型"
 		Traditional_Chinese:"文化型"
 		Russian:"Культурный"
@@ -628,6 +665,7 @@
 	"Maritime":{
 		Italian:"Marittima"
 		French:"Maritime" //same
+		Polish:"Nadmorski"
 		Simplified_Chinese:"航海型"
 		Traditional_Chinese:"航海型"
 		Russian:"Морской"
@@ -638,6 +676,7 @@
 		Italian:"Mercantile"
 		//same in french
 		Simplified_Chinese:"商业型"
+		Polish:"Handlowy"
 		Traditional_Chinese:"商業型"
 		Russian:"Торговый"
 		Czech:"Obchodní"
@@ -646,6 +685,7 @@
 	"Militaristic":{
 		Italian:"Militaristica"
 		French:"Militarisée"
+		Polish:"Militarny"
 		Simplified_Chinese:"军事型"
 		Traditional_Chinese:"軍事型"
 		Russian:"Воинственный"
@@ -656,14 +696,15 @@
 		Italian:"Tipo: "
 		Simplified_Chinese:"城邦类型："
 		Traditional_Chinese:"城邦類型："
+		Polish:"Rodzaj"
 		Russian:"Тип: "
-
 		Czech:"Typ:"
 }
 
 	"Influence: ":{
 		Italian:"Influenza: "
 		Simplified_Chinese:"影响力："
+		Polish:"Wpływ"
 		Traditional_Chinese:"影響力："
 		Russian:"Влияние: "
 		Czech:"Vliv: "
